--- a/ArtesaniasWeb/Views/Home/Index.cshtml
+++ b/ArtesaniasWeb/Views/Home/Index.cshtml
@@ -2,7 +2,59 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <section class="section">
+            <h1 class="text-center display-3">Bienvenido</h1>
+            <div class="container">
+                <div id="carousel" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel" data-slide-to="1"></li>
+                        <li data-target="#carousel" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/../Image/jon-tyson.jpg" class="d-block w-100" alt="Primera">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/../Image/laura-gomez.jpg" class="d-block w-100" alt="Segunda">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/../Image/laura-gomez.jpg" class="d-block w-100" alt="Tercera">
+                        </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carousel" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carousel" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quis
+                        dolorum repellat nihil expedita optio in ipsa officia, velit hic,
+                        sit consectetur distinctio doloribus vero nobis labore dicta
+                        laboriosam iste fugiat.
+                    </div>
+                    <div class="col">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt
+                        culpa odio cumque minus delectus sapiente eum a cum non reiciendis.
+                        Autem vero itaque fugiat labore officia possimus ipsam adipisci
+                        suscipit?
+                    </div>
+                </div>
+            </div>
+            <div class="container center h-25">
+                <img src="https://images.unsplash.com/photo-1586357334053-81901a64fbd4?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80"
+                     alt=""
+                     srcset="" />
+            </div>
+        </section>
+        @*<p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>*@
+        <script>
+            $('#carousel').carousel('cycle')
+        </script>
+    </div>
